# jsonschema_py

./: .gitignore  .tool-versions  Dockerfile  Makefile  README.md  docker-compose.yml  json_schema.py  main.py  pyproject.toml
